updated css of admonition to ensure it stretches horizontally

--- a/docs/source/_static/pymor.css
+++ b/docs/source/_static/pymor.css
@@ -6,6 +6,9 @@
 
 .md-typeset .admonition{
     overflow: hidden;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0;
 }
 
 .output.text_html {
